# Scaner3d_RealSense

./: .gitignore  DepthCamera_2024-01-03-13-09-34.json  pyproject.toml
ply_files/2024-01-04_01-25-46/: point_cloud_0.ply  point_cloud_1.ply
ply_files/2024-01-04_01-47-42/: point_cloud_0.ply  point_cloud_1.ply  point_cloud_2.ply  point_cloud_3.ply
ply_files/2024-01-04_01-50-08/: point_cloud_0.ply  point_cloud_1.ply  point_cloud_2.ply  point_cloud_3.ply
scaner3d/: accel.py  computing.py  filters.py  merging.py  realsensScripits.py  scaner3d.py
