[tool.poetry]
name = "bounce-ball-realsense-"
version = "0.1.0"
description = ""
authors = ["Kleczyk <mailnasyff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pyrealsense2 = "^2.54.2"
numpy = "^1.26.2"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
PyYAML = "^6.0.1"
addict = "^2.4.0"
Pillow = "^10.1.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"
opencv-python = "^4.8.1"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
